--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "filament/forms": "3.2.125",
         "filament/tables": "3.2.125",
         "laravel/framework": "^11.31",
+        "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5"
     },
